tweaked div relative sizes on dashboard, cleaner code for theme hover on timeline, fixed overlapped chatdrawer handle

--- a/brainstorm/client/css/chatdrawer.css
+++ b/brainstorm/client/css/chatdrawer.css
@@ -42,6 +42,7 @@
 #chat-handle{
   float: right;
   position: fixed;
+  z-index: 20;
   top: 45%;
   left: 0%;
   width: 40px;
